# recall-protocol

./: .gitignore  CLAUDE.md  DESIGN_CONSTRAINTS.md  README.md  recall_memory_hub_architecture.md
recall-core/: .env.example  .gitignore  AUDIT.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
recall-core/app/: config.py  main.py  shortid.py
recall-core/app/api/: admin.py  agents.py  deps.py  health.py  memory_read.py  memory_write.py  router.py
recall-core/app/auth/: keys.py  middleware.py
recall-core/app/db/: engine.py  models.py
recall-core/app/db/queries/: agents.py  links.py  memories.py  retrieval.py  system.py
recall-core/app/embedding/: client.py
recall-core/app/ratelimit/: limiter.py  rules.py
recall-core/app/schemas/: agents.py  memories.py
recall-core/clients/generic/: recall_client.py
recall-core/clients/generic/examples/: demo_two_agents.py
recall-core/docs/: usage.md
recall-core/migrations/: env.py
recall-core/migrations/versions/: 001_initial_schema.py  002_system_config.py
recall-core/skill/: skill.md
recall-core/tests/: conftest.py  test_agents.py  test_health.py  test_memory.py
